--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 env
+.venv
+*.pyc
+__pycache__/
+.ipynb_checkpoints/
+.DS_Store
+
+# Generated analysis assets
+plots_corrected/
+csv_plots/
+output_data/
